Docs: prevent highlights from overflowing boxes
Swift SVN r25302

--- a/docs/_static/swift.css
+++ b/docs/_static/swift.css
@@ -7,3 +7,7 @@ div.content ul > li {
   padding-left: 0;
   margin-left: 2em;
 }
+
+div.highlight {
+  background-color: inherit; /* highlighting was overflowing boxes */
+}
